# stack-pr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  git.py  pyproject.toml  shell_commands.py  stack-pr.py
.github/workflows/: lint.yml  release.yml
src/stack_pr/: __main__.py  cli.py  git.py  shell_commands.py
